Fixed styles with tailwindcss footer wrong margin and the main page wrong margin

--- a/public/styles/input.css
+++ b/public/styles/input.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 .slider {
-  background: url("../img/Banner.webp") no-repeat center;
+  background: url("../img/Banner.webp") no-repeat center fixed;
   min-height: 600px;
   height: 100vh;
   background-size: cover;
